# design-python

./: .gitignore
Creational/Abstract Factory Pattern/CarFactory/: Car.py  main.py
Creational/Abstract Factory Pattern/Vending Machine/: Factory.py  main.py
Creational/Builder pattern/Car/: Car.py
Creational/Builder pattern/House/: House.py  SimpleHouse.py
Creational/Builder pattern/Person/: AddressBuilder.py  Person.py  main.py
Creational/Factory/: Shape.py
Creational/Prototype/: main.py
LLD/1. SOLID/: DIP.py  ISP.py  OCP.py  SRP.py
LLD/2. Creational/Factory/: Point.py  Shape.py
LLD/2. Creational/Prototype/: main.py
LLD/2. Creational/Singleton/: main.py
LLD/3. Structural/Adaptor/: main.py
LLD/3. Structural/Bridge/: main.py
LLD/3. Structural/Composite/: main.py
LLD/3. Structural/Decorator/: main.py
LLD/3. Structural/Facade/: main.py
LLD/3. Structural/Flyweight/: color.py  main.py
LLD/5. Problems/Board Games/: main.py  pyproject.toml
LLD/5. Problems/Board Games/src/engine/: Game.py  GameManager.py
LLD/5. Problems/Board Games/src/games/SnakesNLadder/: board.py  game.py  game_result.py  manager.py  move.py  stats.py
LLD/5. Problems/Board Games/src/games/TTT/: board.py  game.py  game_result.py  manager.py  move.py  stats.py
LLD/5. Problems/Board Games/src/games/commons/: GameResult.py  board_base.py  move.py  stats_service.py
LLD/5. Problems/Board Games/src/models/: Player.py
SOLID/: DIP.py  LSP.py  OCP.py
Structural/Bridge/: main.py
Structural/Decorator/: main.py
Structural/Flyweight/: main.py
Structural/Proxy/: main.py
(+26 files in other folders)
